fix(contact): images not visible

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -37,6 +37,10 @@
   margin-bottom: 0;
 }
 
+.contact__social-link {
+  text-decoration: none;
+}
+
 .contact__social-link>img {
   width: 1.5rem;
   height: 1.5rem;
